<resources>
    <string name="app_name">Mustard Seed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="user_comment">User Comment</string>
    <string name="current_streak">Current Streak</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="tvCurrent_streak">Curr Streak</string>
    <string name="notes">notes</string>
    <string name="tvLongest_streak">Long Streak</string>
    <string name="tvCurrent_goal">Current Goal</string>

    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="readSwitch">Reading Complete?</string>
    <string name="changeGoal">Change Goal</string>
    <string name="saveButton">Save</string>

    <string name="name">Name</string>
    <string name="favScripture">Favorite Scripture</string>
    <string name="notificationHdr">Notifications</string>
    //new theme code
    <string name="themeHdr"> Select Theme:</string>
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="enabled">Enabled</string>
    <string name="setTime">Set Time</string>
    <string name="fullName">Full Name</string>
    <string name="time">Time</string>

    <string name="title_activity_create_goal">Create Goal</string>
    <string name="numDays">How many days a week?</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>

    <string name="menu_home">Home</string>
    <string name="menu_goal">Create Goal</string>
    <string name="menu_dailyLog">Daily Log</string>
    <string name="menu_profile">Profile</string>

    <string-array name="theme_array">
        <item>Material-Light</item>
        <item>YOUR-CUSTOM-THEME-NAME</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
