<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mustardseed.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_goal"
        android:name="com.example.mustardseed.ui.goal.GoalFragment"
        android:label="@string/menu_goal"
        tools:layout="@layout/fragment_goal" />

    <fragment
        android:id="@+id/nav_dailylog"
        android:name="com.example.mustardseed.ui.dailyLog.DailyLogFragment"
        android:label="@string/menu_dailyLog"
        tools:layout="@layout/fragment_dailylog" >
        <action
            android:id="@+id/goToGoal"
            app:destination="@+id/nav_goal" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mustardseed.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>